--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,5 @@ board = esp32doit-devkit-v1
 monitor_speed = 115200
 framework = arduino
 lib_deps =
-  # RECOMMENDED
-  # Accept new functionality in a backwards compatible manner and patches
   makerspaceleiden/MFRC522-spi-i2c-uart-async @ ^1.5.1
+  knolleary/PubSubClient @ ^2.8
